<resources>
    <string name="app_name">Pisangin</string>
    <string name="welcome_login">Welcome Back</string>
    <string name="welcome_login_1">Login back into your account</string>
    <string name="welcome_login_2">Log In</string>
    <string name="welcome_login_3">Login</string>
    <string name="welcome_login_4">Don\'t have an account yet ?</string>
    <string name="welcome_login_5">Register Now</string>
    <string name="welcome_login_6">Forgot Password ?</string>

    <string name="welcome_regis">Welcome</string>
    <string name="welcome_regis_1">Signup into your account</string>
    <string name="welcome_regis_2">Full Name</string>
    <string name="welcome_regis_3">Email</string>
    <string name="welcome_regis_4">Password</string>
    <string name="welcome_regis_5">Sign Up</string>
    <string name="welcome_regis_6">Already have an account ?</string>

    <string name="welcome_reset">Forgot Password</string>
    <string name="welcome_reset_1">Enter your email below to reset your password</string>
    <string name="welcome_reset_2">Submit</string>
    <string name="welcome_reset_3">Reset your password</string>
    <string name="welcome_reset_4">Reset</string>
    <string name="welcome_reset_5">Back</string>

    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quality">Product Quality</string>
    <string name="product_weight">Product Weight</string>

    <string name="cart_amount">99</string>
    <string name="cart_increase">Increase Product</string>
    <string name="cart_decrease">Decrease Product</string>
    <string name="cart_title">My Cart</string>
    <string name="cart_price">Total Price</string>
    <string name="cart_order_button">Order</string>
    <string name="cart_total_price">100.000</string>

    <string name="detail_description">Description</string>
    <string name="detail_price">10.000</string>
    <string name="detal_cart_button">+ Keranjang</string>

    <string-array name="payment_status_array">
        <item>Pending</item>
        <item>Paid</item>
        <item>Cancelled</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>