<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_product_price"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".pisang_buyer.detail.DetailProductFragment">

    <TextView
        android:id="@+id/tv_product_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/product_name"
        android:textAppearance="@font/font_1_bold"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_product_image_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/product_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_detail"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_product_name_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/product_name"
        android:textAppearance="@font/font_1_bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_product_image_detail" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_product_name_detail"
        app:layout_constraintTop_toBottomOf="@+id/iv_product_image_detail">

        <ImageButton
            android:id="@+id/btn_increase"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/bg_button"
            android:contentDescription="@string/cart_increase"
            android:src="@drawable/baseline_add" />

        <TextView
            android:id="@+id/product_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/cart_amount"
            android:textAppearance="@font/font_1_bold"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/btn_decrease"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/bg_button"
            android:contentDescription="@string/cart_decrease"
            android:src="@drawable/baseline_min" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/detail_description"
        android:textAppearance="@font/font_1_bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name_detail" />

    <TextView
        android:id="@+id/tv_product_descroption_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_description"
        android:textAppearance="@font/font_1_bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/color_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/product_price"
            android:textAppearance="@font/font_1_bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_price_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/detail_price"
            android:textAppearance="@font/font_1_bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/cart_order_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_price"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>