<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:backgroundTint="@color/color_3"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:padding="16dp">

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout5"
            app:srcCompat="@drawable/clear" />

        <ImageView
            android:id="@+id/iv_product_image_cart"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/iv_product_image_cart"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete"
            app:layout_constraintStart_toEndOf="@+id/iv_product_image_cart"
            app:layout_constraintTop_toTopOf="@+id/iv_product_image_cart">

            <TextView
                android:id="@+id/tv_pruduct_name_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/product_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_product_price_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/product_price"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
