<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <!-- Welcome Text -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/font_1_bold"
        android:text="@string/welcome_login"
        android:textColor="@color/color_2"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/font_3_reguler"
        android:text="@string/welcome_login_1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <!-- Image Background -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="410dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="20dp"
        android:tint="@color/color_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/bg_rounded_2" />

    <!-- Overlay Text on Image -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_4_medium"
        android:text="@string/welcome_login_2"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <!-- Email Input Field -->
    <LinearLayout
        android:id="@+id/login_inpt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_color_input"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_baseline_email_24" />

        <EditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/color_1"
            android:ems="10"
            android:fontFamily="@font/font_3_reguler"
            android:hint="Email"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Password Input Field -->

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/color_2"
        android:text="@string/welcome_login_3"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/login_inpt_pass" />

    <!-- Forgot Password -->
    <LinearLayout
        android:id="@+id/login_inpt_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_color_input"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/login_inpt_email">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="32dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_lock_24" />

            <EditText
                android:id="@+id/ed_login_password"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/color_1"
                android:ems="10"
                android:fontFamily="@font/font_3_reguler"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ic_show_pass"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_show_pass"
                android:layout_width="32dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_invisible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/resetnow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_login_6"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <!-- Register Now -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_3_reguler"
            android:text="@string/welcome_login_4"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/regisnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_3_reguler"
            android:text="@string/welcome_login_5"
            android:textColor="@color/color_2"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
