<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_3"
    tools:context=".reset_pass.ResetPasswordActivity">

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/color_2"
        android:text="@string/welcome_reset_2"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/login_inpt_email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/font_1_bold"
        android:text="@string/welcome_reset"
        android:textColor="@color/color_2"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/font_2_extralight"
        android:text="@string/welcome_reset_1"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="20dp"
        android:tint="@color/color_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/bg_rounded_2" />

    <LinearLayout
        android:id="@+id/login_inpt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_color_input"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/ed_reset_email"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/color_1"
                android:ems="10"
                android:fontFamily="@font/font_3_reguler"
                android:hint="Email"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_email_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="118dp"
        android:layout_height="108dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/ic_forgot" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_color_input_2"
        android:text="@string/welcome_reset_5"
        android:textColor="@color/color_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>